chore: update env example with reference links

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-OPENAI_API_KEY=<sk-...>
+# OpenAI Configuration
+# Get your API key from https://platform.openai.com/account/api-keys
+OPENAI_API_KEY=<your_openai_api_key>
 OPENAI_MODEL_NAME=gpt-3.5-turbo
 
-ANTHROPIC_API_KEY=<sk-ant-...>
-
-SERPER_API_KEY=<serper_api_key>
+# Serper API Configuration
+# Get your API key from https://serper.dev/
+SERPER_API_KEY=<your_serper_api_key>
