--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ crewai = {version = "^0.32.2", extras = ["tools"]}
 [tool.poetry.scripts]
 resume-crew = "resume_crew.main:cli"
 
+[tool.poetry.group.dev.dependencies]
+black = "^24.4.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
